--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <section class="section">
         <div class="half-width">
-            <h1 class="head-style"><span class = "grey-highlight">HELLO, I'M</span> <br> <span class = "orange-highlight">ROB DAVIDSON</span></h1>
-            <p>A full stack allaround designer that placerat <br> in massa consectetur</p>    
+            <h1 class="head-style"><span class = "orange-highlight">HELLO, I'M</span> <br> <span class = "blue-highlight">MOIN MARUF</span></h1>
+            <p>>>> A full stack allaround designer that placerat <br> in massa consectetur</p>    
             <br>
             <a id="link-align" target="_blank" class="link-button" href="https://www.linkedin.com/in/moinuddinmaruf/"> Hire Me </a>
         </div>
@@ -26,33 +26,29 @@
             <img src="images/pic2.png" alt="">
         </div>
         <div class="half-width">
-            <h2 class = "grey-highlight header-style">ABOUT</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and 
-                typesetting industry. Lorem Ipsum has been the industry's 
-                standard dummy text ever since the 1500s, when an unknown 
-                printer took a galley of type and scrambled it to make a type 
-                specimen book.
+            <h2 class = "blue-highlight header-style">ABOUT</h2>
+            <p>>>> I am a Professional web developer. I have been working for years in many reputed companys. I know all stuffs needed to design a responsive website. Here are some projects below. Please check out these and mail me for any kind of queries..
             </p>
             <br>
             <a target="_blank" class="link-button" href="https://www.linkedin.com/in/moinuddinmaruf/">Download My CV</a>
         </div>
     </section>
     <section class="project-area">
-        <h2 class = "grey-highlight header-style" id = "mid-align"> LATEST WORKING PROJECT</h2>
+        <h2 class = "grey-highlight header-style" id = "mid-align"> <span class="blue-highlight">LATEST</span> <span class="orange-highlight"> WORKING PROJECT </span>  </h2>
         <div class="quarter-width single-project" id="first-project">
             <img src="images/image 4.png">
             <h3 class="grey-highlight"> Power-x-gym(gym website) </h3>
-            <p class="grey-highlight">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+            <p>We believe in making serious exercise fun by fusing fitness and entertainment. Join us Today..</p>
         </div>
         <div class="quarter-width single-project">
             <img src="images/image 5.png">
             <h3 class="grey-highlight">Creative Agency</h3>
-            <p class="grey-highlight"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            <p> From marketing firms to advertising agencies to full-service design studios.. </p>
         </div>
         <div class="quarter-width single-project">
             <img src="images/image 8.png">
             <h3 class="grey-highlight">Hard Rock Music</h3>
-            <p class="grey-highlight p-padding"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p> Heavy metal hard rock instrumental compilation. Heavy metal instrumental mix compilation..</p>
         </div>
     </section>
     <section id="inquiry-area">
@@ -64,8 +60,11 @@
         </div>
     </section>
     <section>
+        <p id ="offer" class = "blue-highlight header-style">NEW YEAR OFFER IS GOING ON!!! PLEASE ENLIST YOUR PROJECT PROPOSAL BY MAILING US. TOP 20 GUY WILL GET 30% OFF!!</p>
+    </section>
+    <section>
         <h2 id="stay" class="grey-highlight">STAY CONNECTED </h2>
-        <h3 id="email"> hello@design.com </h3>
+        <h3 id="email"> m.u.maruf1999@gmail.com </h3>
         <img id="icon1" src="images/behance.png" alt="">
         <img id="icon2" src="images/image 6.png" alt="">   
         <img id="icon3" src="images/image 7.png" alt="">     
